# codeshard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/codeshard/: __init__.py  cli.py  config.py  git.py  launch.py
tests/: test_config.py  test_launch.py
