[project]
name = "codeshard"
version = "0.1.0"
description = "Manage Git worktrees as disposable AI coding sandboxes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
]

[project.scripts]
codeshard = "codeshard.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeshard"]
